test/libsolidity/syntaxTests/parsing/location_specifiers_with_var.sol
contract Foo {
	function f() { var memory x; }
}
// ----
// ParserError 6933: (31-34): Expected primary expression.
